@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.torproject.android" android:versionName="0.2.2.14-orbot-alpha-1.0.3" android:versionCode="9">
+      package="org.torproject.android" android:versionName="1.0.4" android:versionCode="10">
        
        <uses-permission android:name="android.permission.INTERNET" />
 
